--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -64,6 +64,10 @@
   padding: 0;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
 html,
 body,
 #root {
